tests/fixtures/invalid/empty_file.py
"""Invalid PyATB script - empty file (no import, no references)."""
